<resources>

    <!--Common String-->
    <string name="app_name">product_client</string>
    <string name="dialog_exit_app_title">Are you sure you want to exit ?</string>
    <string name="dialog_exit_app_positive_button">Yes</string>
    <string name="dialog_exit_app_negative_button">No</string>
    <string name="image_description" />
    <string name="view_description">TextView</string>

    <!--Progress Dialog-->
    <string name="progress_dialog_title">Waiting...</string>
    <string name="progress_dialog_message">Loading...</string>

    <!--AboutFragment-->
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="about_description">Welcome to use our application !</string>

    <!--BubbleNavigation-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="about">About</string>

    <!--ProfileFragment-->
    <string name="tv_name">Admin</string>
    <string name="tv_email">admin@mail.com</string>
    <string name="tv_phone">0000000000</string>
    <string name="tv_password">*********</string>
    <string name="tv_role">Admin</string>
    <string name="btnSave">Save</string>
    <string name="btnLogout">Log out</string>

    <!--Authentication-->
    <string name="edt_email_hint">Please input your email !</string>
    <string name="edt_password_hint">Please input your password !</string>
    <string name="btn_login">Login</string>
    <string name="tv_register"><![CDATA[Create an account >]]></string>
    <string name="btn_register">Register</string>
    <string name="tv_login"><![CDATA[Already have an account >]]></string>
    <string name="tv_address">Hanoi</string>
    <string name="btn_order">Order</string>


</resources>
