<?xml version="1.0" encoding="utf-8"?>
<com.jem.liquidswipe.layout.LiquidSwipeLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_no_image"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:inputType="text"
            android:textColor="@color/blue_inactive"
            android:gravity="center_vertical"
            android:text="@string/tv_name"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue_inactive"
            android:gravity="center_vertical"
            android:text="@string/tv_email"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/blue_inactive"
            android:gravity="center_vertical"
            android:text="@string/tv_phone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/blue_inactive"
            android:gravity="center_vertical"
            android:text="@string/tv_password"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtRole"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@color/blue_inactive"
            android:gravity="center_vertical"
            android:text="@string/tv_role"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:padding="16dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:layout_marginRight="4dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogout"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"/>

    </LinearLayout>

</com.jem.liquidswipe.layout.LiquidSwipeLinearLayout>